fix profile alignment

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h4.event-subheading {
   border-radius: 18px;
 }
 
-.organizers__item .organizers__item-image p {
+.organizers__item  p {
   text-align: center;
   color: #999999;
 }
